[package]
name = "catch_unwind_bench"
version = "0.1.0"
authors = ["Sergey Malyar <sergey.malyar@bitfury.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false